Setting inputs to allow only 28 characters

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
   <html>
      <head>
-      <title>Please leave your message here! (For a change, be creative!)</title>
+      <title>Fancy work for fancy people;)</title>
+      <link rel="stylesheet" href="styles.css">
      </head>
      <body>
         <form action="action.php" method="post">
-          Message<br>
-          <input type="text" name="field1"><br>
-          Name
-            <input type="text" name="field2"><br>
+          <p>
+            Message: <input type="text" name="message" maxlength="28"><br>
+            Name: <input type="text" name="field2" maxlength="28"><br>
            <input type="submit" value="Submit">
+         </p>
         </form>
      </body>
     </html>
