Adding a fancy look!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
      </head>
      <body>
         <form action="action.php" method="post">
+          <h1>Welcome to<br><span data-shadow-text="Text-Shadow">my fancy</span><br> page</h1>
+          <br>
           <p>
             Message: <input type="text" name="message" maxlength="28"><br>
             Name: <input type="text" name="field2" maxlength="28"><br>
