fixed 28 char message input

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-  <html>
+<html>
      <head>
       <title>Please leave your message here! (For a change, be creative!)</title>
      </head>
      <body>
-        <form action="action.php" method="post">
-          Message<br>
-          <input type="text" name="field1"><br>
-          Name
-            <input type="text" name="field2"><br>
-           <input type="submit" value="Submit">
-        </form>
+     	<div align="center">
+	        <form action="action.php" method="post">
+	          Message<br>
+	          <input type="text" name="field1" maxlength="28" placeholder="Your message"><br>
+	          Name<br>
+	            <input type="text" name="field2" placeholder="Your name"><br>
+	           <input type="submit" value="Submit">
+	        </form>
+        </div>
      </body>
     </html>
